# hivemind

./: .dockerignore  .env.example  .gitignore  ANTHROPIC_AGENTS_GUIDE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEEP_BRAIN_ANALYSIS.md  DIAGNOSIS.md  Dockerfile  Evolve_Code_Evolution_Engine.ipynb  FLOW_ANALYSIS.md  IMPROVEMENTS_PLAN.md  Makefile  PROMPT_ANALYSIS_REPORT.md  README.md  REVIEW.md  SYSTEM_IMPROVEMENT_PLAN.md  TEST_PLAN.md  active_escalation.py  agent_manager.py  agent_runtime.py  architect_agent.py  attack-db.json  blackboard.py  bot.py  brain_antipatterns.py  brain_performance.py  brain_quality.py  claude_agent.py  code_exec_gate.py  code_execution_gate.py  complexity.py  config.py  context_compressor.py  contract_validator.py  contracts.py  conversation_store.py  cross_project_memory.py  (+46 more)
.github/: labels.yml  pull_request_template.md
.nexus/: COMPETITION_STRATEGY.md  COMPETITIVE_UX_RESEARCH.md  DATABASE_SCHEMA.md  FRONTEND_REVIEW.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_ROADMAP.md  PROJECT_MANIFEST.md  RESEARCH_architectural_analysis.md  SECURITY_AUDIT.md  decision_log.md  memory_snapshot.json  todo.md
agentstack-mcp/: .mcp.json  CLAUDE.md  README.md  package.json
api/: dag.py  plugins.py
attack_results/: freshworks_advanced.json  freshworks_grandma_lang.json  freshworks_wave3.json  freshworks_wave4.json  hubspot.json  hubspot_advanced.json  hubspot_wave3.json  hubspot_wave4.json  intercom.json  intercom_advanced.json  intercom_crescendo.json  intercom_multi_vector.json  intercom_wave3.json  intercom_wave4.json  kommunicate.json  livechat_advanced.json  livechat_multi_vector.json  livechat_wave3.json  livechat_wave4.json
benchmark/: run_benchmark.py
benchmarks/: AB_COMPARISON_REPORT.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_OSS_COMPARISON_REPORT.md  REFACTOR_COMPARISON_REPORT.md  ab_benchmark.py  bench_e2e.py  bench_final_e2e.py  bench_full_pipeline.py  bench_oss.py  bench_prompts.py  bench_real_e2e.py  benchmark_output.txt  benchmark_results.json  bug_analysis.md  code_quality_scorer.py  create_charts.py  create_e2e_charts.py  e2e_output.txt  e2e_results.json  enhanced_prompts.py  final_e2e_output.txt  final_e2e_results.json  final_report.md  full_pipeline_output.txt  full_pipeline_results.json  improvement_plan_analysis.md  langgraph_executor.py  langgraph_executor_enhanced.py  langgraph_research_notes.md  oss_benchmark.py  oss_tools_to_test.md  prompt_bench_output.txt  prompt_benchmark_results.json  real_benchmark.py  real_e2e_results.json  real_pytest_NEW.txt  real_pytest_OLD.txt  run_langgraph_enhanced.py  run_langgraph_refactor.py  test_bug2_file_corruption.py  (+1 more)
chatbot-attack-poc/: attack-db.json  merge_attacks.py
cli/: README.md  package-lock.json  package.json
dashboard/: api.py  constants.py  events.py
docs/: OSS_OUTSOURCING.md  hero-flow.mmd  index.html
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
landing/: index.html
marketing/: LAUNCH_PLAYBOOK.md
math-agent/: README.md  todo.md
plugins/: __init__.py  documentation_writer.py
research/: blue_ocean_opportunities_2026.md  market_inefficiencies_2026.md  virtual_try_on_companies.md
scripts/: attack_taxonomy.md
src/: config.py  dependencies.py
templates/: README.md  cli-tool.json  mobile-app.json  react-dashboard.json  rest-api.json  saas-starter.json
tests/: conftest.py  test_api.py  test_api_coverage.py  test_api_endpoints.py  test_artifact_hardening.py  test_blackboard.py  test_brain_antipatterns.py  test_brain_performance.py  test_brain_quality.py  test_chat_api.py  test_circles_api.py  test_config_full.py  test_config_validation.py  test_contracts.py  test_dag_api.py  test_dag_executor.py  test_dag_locking.py  test_debate_engine.py  test_dynamic_spawner.py  test_error_handling.py  test_eventbus_backlog.py  test_eventbus_resilience.py  test_failure_classification.py  test_file_output_manager.py  test_health_api.py  test_health_metrics.py  test_incremental_plan.py  test_isolated_query_hardening.py  test_judge_agent.py  test_new_features.py  test_orch_review.py  test_orchestrator.py  test_plan_modification.py  (+17 more)
(+233 files in other folders)
